--- a/config.yaml
+++ b/config.yaml
@@ -1,27 +1,23 @@
 base:
-  project: Brain MRI segmentation
-  random_state: 42
+  project: Brain MRI FLAIR segmentation
 
 dataset:
   raw_dataset: data/raw/lgg-mri-segmentation
   train_csv: data/preprocessed/train.csv
   valid_csv: data/preprocessed/valid.csv
   test_csv: data/preprocessed/test.csv
-  mean: [-0.8993, -0.8798, -0.8943]
-  std: [0.0039, 0.0039, 0.0040]
-  image_height: 224
-  image_width: 224
   batch_size: 32
   num_workers: 2
 
 model:
   in_channels: 3
   out_channels: 1
-  encoder_name: efficientnet-b7
+  encoder_name: timm-mobilenetv3_large_100
   encoder_weights: imagenet
 
 train:
   lr: 0.001
   num_epochs: 10
-  checkpoint_path: './saved_models/unet.pth.tar'
+  checkpoint_path: saved_models/mobilenetv3-flair-segmentation.pth.tar
   load_checkpoint: False
+  optimized_save_path: ./saved_models/flair-segmentation.pt
