--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -34,11 +34,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest -v
-    # - name: Deploy to Heroku
-    #   env:
-    #     HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-    #     HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-    #   if: github.ref == 'refs/heads/master' && job.status == 'success'
-    #   run: |
-    #     git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
-    #     git push heroku HEAD:master -f
+    - name: Deploy to Heroku
+      env:
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+        HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      if: github.ref == 'refs/heads/master' && job.status == 'success'
+      run: |
+        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
+        git push heroku HEAD:master -f
