--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install mypy pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f full-requirements.txt ]; then pip install -r full-requirements.txt; fi
     - name: mypy tests
       run: |
         mypy src/ --ignore-missing-imports
