--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py39
+envlist = py37
 skipsdist = True
 
 [testenv]
-deps = -rrequirements.txt
+deps = -rfull-requirements.txt
 commands = 
     # stop the build if there are Python syntax errors or undefined names
     mypy src/ --ignore-missing-imports
